--- a/index.html
+++ b/index.html
@@ -6,33 +6,31 @@
   <title>Memory Management Visualizer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    /* Background Image and Gradient */
     body {
-      background-image: url('https://source.unsplash.com/1600x900/?technology,code');
-      background-size: cover;
-      background-position: center;
+      background: linear-gradient(135deg, #0f172a, #0d9488); /* Dark Blue to Teal */
       background-attachment: fixed;
-    }
-    .hero-section {
-      background: rgba(0, 0, 0, 0.6); /* Dark overlay for readability */
+      background-size: cover;
+      color: #e2fbe5;
+      font-family: 'Segoe UI', sans-serif;
     }
 
-    /* Floating Card Styles */
+    .hero-section {
+      background: rgba(0, 0, 0, 0.6);
+    }
+
     .card {
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: popUp 1s ease-out, floating 5s ease-in-out infinite; /* Combine pop-up and floating animation */
+      animation: popUp 1s ease-out, floating 5s ease-in-out infinite;
     }
 
-    /* Hover Effect for Cards */
     .card:hover {
-      transform: translateY(-15px);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+      transform: translateY(-10px);
+      box-shadow: 0 12px 24px rgba(34, 197, 94, 0.3);
     }
 
-    /* Pop-up Animation (Cards grow in size from small to large) */
     @keyframes popUp {
       0% {
-        transform: scale(0);
+        transform: scale(0.9);
         opacity: 0;
       }
       100% {
@@ -41,17 +39,9 @@
       }
     }
 
-    /* Floating Animation */
     @keyframes floating {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-15px); /* Move up */
-      }
-      100% {
-        transform: translateY(0);
-      }
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-12px); }
     }
 
     .fade-in {
@@ -59,91 +49,101 @@
     }
 
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
-    /* Color Scheme for Cards */
     .card-bg {
-      background: linear-gradient(135deg, #f472b6, #9333ea);
+      background: linear-gradient(135deg, #22c55e, #0284c7);
     }
 
-    /* Text Shadow for Visibility */
     .text-shadow {
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    .highlight-btn {
+      background: linear-gradient(135deg, #16a34a, #0f766e);
+    }
+
+    .highlight-btn:hover {
+      background: linear-gradient(135deg, #22d3ee, #059669);
     }
   </style>
 </head>
-<body class="bg-gray-900 text-white font-sans">
+<body class="text-white">
 
   <!-- Header Section -->
-  <header class="hero-section text-white py-10">
-    <div class="max-w-6xl mx-auto px-4">
-      <h1 class="text-5xl font-extrabold text-center mb-2 animate__animated animate__fadeIn text-shadow">Memory Management Visualizer</h1>
-      <p class="text-lg text-center opacity-80 mb-8 text-shadow">Explore memory allocation strategies and visualize their effects in real time with a dark, modern interface.</p>
+  <header class="hero-section py-12 text-center">
+    <div class="max-w-6xl mx-auto px-6">
+      <h1 class="text-5xl font-extrabold text-shadow mb-4">Memory Management Visualizer</h1>
+      <p class="text-xl text-gray-300 text-shadow mb-8">Understand how memory allocation strategies work in real-time with a modern interface.</p>
       <div class="flex justify-center space-x-6">
-        <a href="#about" class="bg-white text-pink-600 hover:bg-pink-200 py-2 px-6 rounded-full font-semibold transition">Learn More</a>
-        <a href="#visualizer" class="bg-pink-600 hover:bg-pink-800 text-white py-2 px-6 rounded-full font-semibold transition">Start Visualizing</a>
+        <a href="about.html" class="bg-gradient-to-r from-green-400 via-teal-400 to-blue-500 hover:from-green-500 hover:to-blue-600 text-white py-3 px-8 rounded-full font-semibold text-xl transition duration-300 shadow-lg card">
+          Learn More
+        </a>
+        <a href="#visualizer" class="bg-gradient-to-r from-green-400 via-teal-400 to-blue-500 hover:from-green-500 hover:to-blue-600 text-white py-3 px-8 rounded-full font-semibold text-xl transition duration-300 shadow-lg card">
+          Start Visualizing
+        </a>
+      </div>
+      
+
       </div>
     </div>
   </header>
 
   <!-- About Section -->
   <section id="about" class="py-20 bg-gray-800 text-center fade-in">
-    <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-3xl font-semibold mb-6 text-pink-400">About the Project</h2>
-      <p class="text-lg leading-relaxed text-gray-300 mb-8">
-        This visualizer demonstrates how memory is allocated and managed in a computer system. It includes interactive simulations of memory allocation strategies like First Fit, Best Fit, Worst Fit, and more, all presented in a vibrant dark theme.
+    <div class="max-w-4xl mx-auto px-6">
+      <h2 class="text-3xl font-bold text-lime-400 mb-6">About the Project</h2>
+      <p class="text-lg text-gray-200 mb-8">
+        This visualizer demonstrates how memory is allocated and managed using strategies like FIFO, LRU, First Fit, Best Fit, and Worst Fit. All wrapped in a clean, animated dashboard to aid understanding of memory operations.
       </p>
-      <div class="flex justify-center gap-8">
+      <div class="flex justify-center gap-8 flex-wrap">
         <div class="card card-bg p-6 rounded-lg shadow-lg max-w-sm">
           <h3 class="text-2xl font-semibold text-white mb-3">Interactive Visualization</h3>
-          <p class="text-gray-100">Watch as memory is dynamically allocated with real-time visual updates.</p>
+          <p class="text-white">Watch as memory is dynamically allocated with real-time frame transitions and performance charts.</p>
         </div>
         <div class="card card-bg p-6 rounded-lg shadow-lg max-w-sm">
           <h3 class="text-2xl font-semibold text-white mb-3">Allocation Strategies</h3>
-          <p class="text-gray-100">Explore different memory allocation strategies and visualize their impact on memory blocks.</p>
+          <p class="text-white">Explore and compare the impact of multiple memory allocation strategies on system performance.</p>
         </div>
       </div>
     </div>
   </section>
-
   <!-- Features Section -->
   <section class="py-20">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl font-semibold text-center text-pink-400 mb-12">Key Features</h2>
+    <div class="max-w-6xl mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center text-lime-400 mb-12">Key Features</h2>
       <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 text-lg">
-        <li class="card card-bg p-6 rounded-lg shadow-lg hover:shadow-xl transition-all">
+        <li class="card card-bg p-6 rounded-lg shadow-lg transition-all">
           <span class="text-2xl font-semibold text-white">Real-Time Updates</span>
-          <p class="text-gray-100 mt-2">Experience live memory updates as blocks are allocated and deallocated in real time.</p>
+          <p class="text-white mt-2">Live updates of memory frames with animation and status indicators for hits and faults.</p>
         </li>
-        <li class="card card-bg p-6 rounded-lg shadow-lg hover:shadow-xl transition-all">
+        <li class="card card-bg p-6 rounded-lg shadow-lg transition-all">
           <span class="text-2xl font-semibold text-white">Multiple Strategies</span>
-          <p class="text-gray-100 mt-2">Visualize and compare various memory allocation strategies and how they perform.</p>
+          <p class="text-white mt-2">Supports FIFO, LRU, and other strategies with switchable modes and customizable speed.</p>
         </li>
-        <li class="card card-bg p-6 rounded-lg shadow-lg hover:shadow-xl transition-all">
-          <span class="text-2xl font-semibold text-white">Fragmentation Insights</span>
-          <p class="text-gray-100 mt-2">See the effects of fragmentation and learn how it impacts memory efficiency.</p>
+        <li class="card card-bg p-6 rounded-lg shadow-lg transition-all">
+          <span class="text-2xl font-semibold text-white">Performance Insights</span>
+          <p class="text-white mt-2">Graphical insights into page hits and faults via Chart.js integration for clear understanding.</p>
         </li>
       </ul>
     </div>
   </section>
 
-  <!-- Start Visualizing Section -->
+  <!-- Visualizer Section -->
   <section id="visualizer" class="py-20 bg-gray-800 text-center">
     <div class="max-w-3xl mx-auto px-4">
-      <h2 class="text-3xl font-semibold text-pink-400 mb-6">Start Visualizing</h2>
-      <p class="text-lg text-gray-300 mb-6">Launch the visualizer and dive deep into the world of memory allocation!</p>
-      <a href="projectOS.html" class="bg-pink-600 hover:bg-pink-800 text-white py-3 px-8 rounded-full font-semibold text-xl transition">Launch Visualizer</a>
+      <h2 class="text-3xl font-bold text-lime-400 mb-6">Start Visualizing</h2>
+      <p class="text-lg text-gray-300 mb-6">Launch the simulation dashboard and explore how memory is managed dynamically!</p>
+      <a href="Index.html" class="highlight-btn text-white py-3 px-8 rounded-full font-semibold text-xl transition">Launch Visualizer</a>
+
+
     </div>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="bg-gray-900 text-white py-4 mt-20 text-center">
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-white py-6 text-center mt-20">
     <p>&copy; 2025 Memory Management Visualizer. All rights reserved.</p>
   </footer>
 
